src/test/deca/context/valid/created/Objet/ConvFloatReturn.deca
// Description:
//    teste un convFloat sur le return
// Resultats:
//    

class A {
    float m() {
        return 3;
    }
}

{

}